--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
-{% block content %}
-<header>
-    <ul>
-        <li><a href="/"><p> Home </p></a></li>
-        <li><a href="/tasks"><p> Task </p></a></li>
-    </ul>
+{% block body %}
+<h1>Vet Manager</h1>
+<h2>Welcome To The Vet Manager Homepage</h2>
+<ul>
+    <li><a href="/"><p> Home </p></a></li>
+    <li><a href="/pet"><p>Pets</p></a></li>
+    <li><a href="/vet"><p>Vets</p></a></li>
+</ul>
 </header>
 {% endblock %}
