--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vet managment</title>
 </head>
 <body>
     {% block body %}
@@ -14,6 +14,8 @@
             <li><a href="/"><p> Home </p></a></li>
             <li><a href="/pet"><p>Pets</p></a></li>
             <li><a href="/vet"><p>Vets</p></a></li>
+            <li><a href="/add_new_pet"><p>Add New Pet</p></a></li>
+            <li><a href="/add_new_vet"><p>Add New Vet</p></a></li>
         </ul>
     </header>
     {% endblock %}
