--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 
 {% block body %}
 <h1>Vet Manager</h1>
-<h2>Welcome To The Vet Manager Homepage</h2>
 <ul>
     <li><a href="/"><p> Home </p></a></li>
     <li><a href="/pet"><p>Pets</p></a></li>
     <li><a href="/vet"><p>Vets</p></a></li>
+    <li><a href="/add_new_pet"><p>Add New Pet</p></a></li>
+    <li><a href="/add_new_vet"><p>Add New Vet</p></a></li>
 </ul>
 </header>
 {% endblock %}
