--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <ul>
     <li><a href="/"><p> Home </p></a></li>
     <li><a href="/pet"><p>Pets</p></a></li>
-    <li><a href="/vet"><p>Vets</p></a></li>
+    <li><a href="/vet_list"><p>Vets</p></a></li>
     <li><a href="/add_new_pet"><p>Add New Pet</p></a></li>
     <li><a href="/add_new_vet"><p>Add New Vet</p></a></li>
 </ul>
