added delete to pets

--- a/templates/add_new_vet.html
+++ b/templates/add_new_vet.html
@@ -6,6 +6,7 @@
         <li><a href="/vet_list"><p>Vets</p></a></li>
         <li><a href="/add_new_pet"><p>Add New Pet</p></a></li>
         <li><a href="/add_new_vet"><p>Add New Vet</p></a></li>
+        <li><a href="/edit"><p>Edit Pet</p></a></li>
     </ul>
 </header>
 
