--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
+<header>
 <h1>Vet Manager</h1>
 <ul>
     <li><a href="/"><p> Home </p></a></li>
@@ -8,6 +9,7 @@
     <li><a href="/vet_list"><p>Vets</p></a></li>
     <li><a href="/add_new_pet"><p>Add New Pet</p></a></li>
     <li><a href="/add_new_vet"><p>Add New Vet</p></a></li>
+    <li><a href="/edit"><p>Edit Pet</p></a></li>
 </ul>
 </header>
 
