--- a/templates/vet_list.html
+++ b/templates/vet_list.html
@@ -9,6 +9,8 @@
         <li><a href="/vet_list"><p>Vets</p></a></li>
         <li><a href="/add_new_pet"><p>Add New Pet</p></a></li>
         <li><a href="/add_new_vet"><p>Add New Vet</p></a></li>
+        <li><a href="/edit"><p>Edit Pet</p></a></li>
+
     </ul>
 </header>
 
