added delete to vets

--- a/templates/edit_pet.html
+++ b/templates/edit_pet.html
@@ -14,10 +14,10 @@
     </ul>
     </header>
 
-<form action="/edit/{{pet_guest.id}}" method="post">
+<form action="/edit/{{pet.id}}" method="post">
     <div>
     <label for="description">Description:</label>
-    <input type="text" id="description" name="description" value="{{pet_guest.pets_name}}" required autofocus>
+    <input type="text" id="description" name="description" value="{{pet.pets_name}}" required autofocus>
     </div>
 
 
