--- a/templates/vet_list.html
+++ b/templates/vet_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block head %}<head><link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"></head>{% endblock %}
 {% block body %}
 <header>
     <h1>Vet Manager</h1>
@@ -28,4 +28,3 @@
 
 
 
-<
