--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,24 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
+{% block head %}
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">    
+    <link 
+
     <title>Vet managment</title>
 </head>
+{% endblock%}
+{% block body %}
 <body>
-    {% block body %}
+
     <header>
         <h1>Vet Manager</h1>
         <ul>
@@ -19,8 +30,9 @@
             <li><a href="/edit"><p>Edit Pet</p></a></li>
         </ul>
     </header>
-    {% endblock %}
+    
 </body>
 </html>
+{% endblock %}
 
 
